fix image modal z-index

--- a/src/app/sass/main.scss
+++ b/src/app/sass/main.scss
@@ -231,7 +231,7 @@ code {
     height: 100%;
     max-width: 1000px;
     position: relative;
-    overflow:scroll;
+    overflow: scroll;
     .k-editor {
       position: relative;
       z-index: 1;
@@ -296,13 +296,13 @@ code {
       transform: translate(-50%, -50%);
     }
   }
-  .k-floating-btn{
+  .k-floating-btn {
     position: absolute;
     top: 20px;
     right: 20px;
     cursor: pointer;
     transition: transform 300ms;
-    &:hover{
+    &:hover {
       transform: scale(1.1);
     }
   }
@@ -320,6 +320,7 @@ code {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.6);
   align-items: center;
+  z-index: 100;
   img {
     max-width: 100%;
     max-height: 100%;
@@ -355,7 +356,7 @@ code {
     font-size: 30px;
     cursor: pointer;
     transition: all 0.5s;
-    &:hover{
+    &:hover {
       transform: rotateZ(180deg);
       background-color: rgba(0, 0, 0, 0.2);
     }
